--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.664.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/themes": "^3.1.4",
     "@workos-inc/authkit-nextjs": "^0.10.1",
     "@workos-inc/node": "^7.27.3",
+    "axios": "^1.7.7",
     "next": "14.2.11",
     "react": "^18",
     "react-country-state-city": "^1.1.3",
